kubernetes/apps/django/static-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-static-service
spec:
  selector:
    app: nginx-static
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
