kubernetes/apps/django/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: django-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/websocket-services: "django-service"

spec:
  rules:
  - host: DOMAIN_NAME_PLACEHOLDER
    http:
      paths:
      - path: /static(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: nginx-static-service
            port:
              number: 80
      - path: /ws(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: django-service
            port:
              number: 80
      - path: /graphql(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: django-service
            port:
              number: 80
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: django-service
            port:
              number: 80
  tls:
  - hosts:
    - DOMAIN_NAME_PLACEHOLDER
    secretName: DJANGO_TLS_SECRET_NAME_PLACEHOLDER
